--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,8 @@ language: python
 python: "2.7"
 
 install: pip install ansible
+install: pip install ansible-lint
+install: pip install yamllint
 
-script: ansible-playbook ansible/foreman.yml --syntax-check
-
-- hosts: all
-  tasks:
-       - yum:
-               name: ansible
-       - yum:
-               name: ansible-lint
-       - yum:
-               name: yamllint
-
-- import_playbook: ansible-lint ./
-- import_playbook: yammlint ./  
+script: ansible-playbook ansible_lint ./
+script: ansible-playbook yamllint ./
