--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 language: python
 python: "2.7"
 
-install: pip install ansible
-install: pip install ansible-lint
-install: pip install yamllint
+install: yum install ansible
+install: yum install ansible-lint
+install: yum install yamllint
 
 script: ansible-playbook ansible_lint ./
 script: ansible-playbook yamllint ./
