--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
    - pip install yamllint
 
 script:
-   - ansible-playbook ansible-lint ./
-   - ansible-playbook yamllint ./
+   - ansible-lint ./
+   - yamllint ./
